Double scroll fix

--- a/src/stylus/common/defaults.styl
+++ b/src/stylus/common/defaults.styl
@@ -51,7 +51,6 @@ body {
 
 html,
 body {
-  overflow-y: scroll;
   // Enable scroll momentum on iPhone Safari (webkit)
   -webkit-overflow-scrolling: touch;
 }
